--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
-  <script language="javascript"  src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+  <script language="javascript"  src="./static/js/jquery-1.4.2.min.js"></script>
   <script id="demo" type="text/javascript" src="./index.js"></script>
 </head>
 
