--- a/programming.html
+++ b/programming.html
@@ -10,42 +10,74 @@
 
 <body>
 
-<header>
-  <div class="w3-content" style="max-width:1400px;">
-    <table class="s3-table">
-      <tr class="s3-card s3-full">
-            <div class="btn-group navigation-buttons">
-              <button>
-                <a href="index.html">Home</a>
-              </button>
-            </div>
-        </tr>
+<div class="w3-content" style="max-width:1400px;">
+  <div class="s3-row-padding">
+    <div style="width: 50%;float: left; text-align: right;">
+      <div class="s3-image-container">
+        <img src="./static/images/programming.jpeg" class="s3-image">
+      </div>
+
+      <div class="w3-container">
+        <h3><b>Programming</b></h3>
+        <div class="content">
+          <em>I keep some of the useful code here.<br>
+          These algorithms are either my own implementations or popular implementations from the inernet.<br>
+          I use these for the purpose of demo or as base codes in applications whenever required.</em>
+        </div>
+      </div>
+    </div>
+
+    <div style="width: 50%; float: right;">
+      <div style="padding: 25%; padding-left: 10px; padding-bottom: 5%;">
+        <div class="link-button">
+          <a href="index.html">Home</a>
+        </div>
+        <div class="link-button">
+          <a href="resources.html">Resources</a>
+        </div>
+        <div class="link-button">
+          <a href="teaching.html">Teaching Apprenticeships</a>
+        </div>
+        <div class="link-button">
+          <a href="programming.html">Programming</a>
+        </div>
+        <div class="link-button">
+          <a href="./static/pdfs/srinath_cv.pdf">CV</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <hr>
+
+  <h4 style="text-align: center;">Sorting</h4>
+  <div>
+    <table style="margin: auto;">
+      <tr>
+        <td>Insertion Sort </td>
+        <td><a href="./static/algorithms/insertion-sort.cpp">insertion-sort.cpp </a></td>
+        <td><a href="./static/algorithms/insertion-sort.pdf">notes</a></td>
+      </tr>
+      <tr>
+        <td>Merge Sort </td>
+        <td><a href="./static/algorithms/merge-sort.cpp">merge-sort.cpp </a></td>
+        <td><a href="./static/algorithms/merge-sort.pdf">notes</a></td>
+      </tr>
+      <tr>
+        <td>Quick Sort </td>
+        <td><a href="./static/algorithms/quick-sort.cpp">quick-sort.cpp </a></td>
+        <td><a href="./static/algorithms/quick-sort.pdf">notes</a></td>
+      </tr>
     </table>
   </div>
-</header>
 
-<h1 style="text-align: center;">Sorting</h1>
-<table style="margin: 0 auto;">
-  <tr>
-    <td>Insertion Sort </td>
-    <td><a href="./static/algorithms/insertion-sort.cpp">insertion-sort.cpp </a></td>
-    <td><a href="./static/algorithms/insertion-sort.pdf">notes</a></td>
-  </tr>
-  <tr>
-    <td>Merge Sort </td>
-    <td><a href="./static/algorithms/merge-sort.cpp">merge-sort.cpp </a></td>
-    <td><a href="./static/algorithms/merge-sort.pdf">notes</a></td>
-  </tr>
-  <tr>
-    <td>Quick Sort </td>
-    <td><a href="./static/algorithms/quick-sort.cpp">quick-sort.cpp </a></td>
-    <td><a href="./static/algorithms/quick-sort.pdf">notes</a></td>
-  </tr>
-</table>
+  <div class="quote">
+    <b>"Life is just an Algorithm which Halts."</b>
+  </div>
 
-<footer class="w3-center w3-white w3-padding-16">
-  <p><b>"Life is just an Algorithm which Halts."</b></p>
-</footer>
+</div>
+
 
 </body>
 </html>
